[package]
name = "ethash"
description = "An Apache-licensed Ethash implementation."
version = "0.4.1"
authors = ["Wei Tang <hi@that.world>"]
license = "Apache-2.0"
edition = "2018"

[dependencies]
ethereum-types = { version = "0.8", default-features = false }
rlp = { version = "0.4", default-features = false }
byteorder = { version = "1", default-features = false }
sha3 = { version = "0.8", default-features = false }
sha2 = { version = "0.8", default-features = false, optional = true }
lazy_static = { version = "1.4", default-features = false, optional = true, features = ["spin_no_std"] }

tiny-keccak = { version = "2.0.1", features = ["keccak"], optional = true }
rlp-derive = { version = "0.1.0", default-features = false, optional = true }
num_cpus = { version = "1", optional = true }
rayon = { version = "1.5", optional = true }
parking_lot = { version = "0.11", optional = true }

[dev-dependencies]
hex = { version = "0.4", default-features = false }
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0" }
humantime = "2.0.1"

[features]
default = ["std", "withproofs"]
withproofs = [
  "rlp-derive",
  "tiny-keccak",
  "sha2",
  "rlp-derive",
  "lazy_static",
]
std = [
  "ethereum-types/std",
  "rlp/std",
  "byteorder/std",
  "sha3/std",
  "num_cpus",
  "rayon",
  "parking_lot",
]
